--- a/apps/zero-app/src/app/globals.css
+++ b/apps/zero-app/src/app/globals.css
@@ -63,7 +63,12 @@
   * {
     @apply border-border;
   }
+  html {
+    @apply scroll-smooth;
+  }
   body {
-    @apply bg-zinc-900 text-zinc-400 font-sans antialiased;
+    @apply bg-background text-foreground font-sans antialiased;
+    font-synthesis-weight: none;
+    text-rendering: optimizeLegibility;
   }
 }
